Dark mode bg fix

--- a/radiofeed/static/css/app.css
+++ b/radiofeed/static/css/app.css
@@ -179,7 +179,7 @@ input[type="search"]::-webkit-search-results-decoration {
         .link:active,
         .link:hover,
         .link:focus {
-            color: theme("colors.blue.300");
+            color: theme("colors.sky.400");
         }
     }
 }
